fixed wrong padding

--- a/jportal_mcr_module/src/main/resources/web/templates/template_addrBookTh/CSS/template_addrBookTh.css
+++ b/jportal_mcr_module/src/main/resources/web/templates/template_addrBookTh/CSS/template_addrBookTh.css
@@ -6,5 +6,5 @@
 #logo .logoTitle {
     font-size: 1.2em;
     margin: 0px;
-    padding: 93px 0 0 115px;
+    padding: 45px 0 0 115px;
 }
